[gd_scene load_steps=5 format=3 uid="uid://c61u0dfvhw8na"]

[ext_resource type="Script" path="res://Scripts/battle_scene.gd" id="1_x7w4m"]
[ext_resource type="PackedScene" uid="uid://c6oxqqsro6xjd" path="res://Characters/character_base.tscn" id="2_mwixr"]
[ext_resource type="PackedScene" uid="uid://c1vdcn5t1ti84" path="res://Scenes/character_info_ui.tscn" id="3_o5tct"]
[ext_resource type="PackedScene" uid="uid://b6m7ilkftkvob" path="res://Scenes/skill_button.tscn" id="3_uaflf"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_x7w4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterBase" parent="CanvasLayer" instance=ExtResource("2_mwixr")]
position = Vector2(190, 489)

[node name="CharacterBase2" parent="CanvasLayer" instance=ExtResource("2_mwixr")]
position = Vector2(1031, 167)

[node name="Dialog" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -260.0
offset_right = 333.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Dialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SkillButton 1" parent="CanvasLayer/Dialog/VBoxContainer/HBoxContainer" instance=ExtResource("3_uaflf")]
layout_mode = 2

[node name="SkillButton 2" parent="CanvasLayer/Dialog/VBoxContainer/HBoxContainer" instance=ExtResource("3_uaflf")]
layout_mode = 2
text = "技能 2"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Dialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SkillButton 3" parent="CanvasLayer/Dialog/VBoxContainer/HBoxContainer2" instance=ExtResource("3_uaflf")]
layout_mode = 2
text = "技能 3"

[node name="SkillButton 4" parent="CanvasLayer/Dialog/VBoxContainer/HBoxContainer2" instance=ExtResource("3_uaflf")]
layout_mode = 2
text = "技能 4"

[node name="Buttons" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -258.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChooseButton" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "選擇角色"

[node name="BattleButton" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "戰鬥"

[node name="ItemButton" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "道具"

[node name="RunButton" type="Button" parent="CanvasLayer/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "逃跑"

[node name="PlayerCharacterInfoUI" parent="CanvasLayer" instance=ExtResource("3_o5tct")]
offset_left = 284.0
offset_top = 366.0
offset_right = 659.0
offset_bottom = 486.0

[node name="EnemyCharacterInfoUI" parent="CanvasLayer" instance=ExtResource("3_o5tct")]
offset_left = 556.0
offset_top = 30.0
offset_right = 931.0
offset_bottom = 150.0

[node name="CharacterBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -426.0
offset_top = -234.0
offset_right = 426.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.494118, 0.752941, 0.364706, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CharacterBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterButton 1" type="Button" parent="CanvasLayer/CharacterBox/VBoxContainer"]
layout_mode = 2
text = "角色 1"
expand_icon = true

[node name="CharacterButton 2" type="Button" parent="CanvasLayer/CharacterBox/VBoxContainer"]
layout_mode = 2
text = "角色 2"
expand_icon = true

[node name="CharacterButton 3" type="Button" parent="CanvasLayer/CharacterBox/VBoxContainer"]
layout_mode = 2
text = "角色 3"
expand_icon = true

[node name="CharacterButton 4" type="Button" parent="CanvasLayer/CharacterBox/VBoxContainer"]
layout_mode = 2
text = "角色 4"
expand_icon = true

[node name="CharacterButton 5" type="Button" parent="CanvasLayer/CharacterBox/VBoxContainer"]
layout_mode = 2
text = "角色 5"
expand_icon = true

[connection signal="pressed" from="CanvasLayer/Buttons/VBoxContainer/ChooseButton" to="." method="_on_choose_button_pressed"]
